<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:divider="@drawable/keyboard_divider"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow style="@style/keyboard_row">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_key1"
                style="@style/text_keys_button"
                android:text="@string/number_one" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_key2"
                style="@style/text_keys_button"
                android:text="@string/number_two" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_key3"
                style="@style/text_keys_button"
                android:text="@string/number_three" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_key4"
                style="@style/text_keys_button"
                android:text="@string/number_four" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_key5"
                style="@style/text_keys_button"
                android:text="@string/number_five" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_key6"
                style="@style/text_keys_button"
                android:text="@string/number_six" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_key7"
                style="@style/text_keys_button"
                android:text="@string/number_seven" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_key8"
                style="@style/text_keys_button"
                android:text="@string/number_eight" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_key9"
                style="@style/text_keys_button"
                android:text="@string/number_nine" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/button_reset"
                style="@style/image_keys_button"
                android:contentDescription="@string/btn_reset"
                android:src="@drawable/plu_ic_restart"
                android:tint="@color/plu_pin_view_clean"
                android:visibility="invisible"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_key0"
                style="@style/text_keys_button"
                android:text="@string/number_zero" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/button_keyC"
                style="@style/image_keys_button"
                android:contentDescription="@string/btn_backspace"
                android:src="@drawable/plu_ic_keyboard_backspace"
                android:tint="@color/plu_pin_view_clean" />

        </TableRow>

        <TableRow style="@style/keyboard_row">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_primary"
                style="@style/text_keys_button"
                tools:text="@tools:sample/lorem" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
